--- a/html/css/custom_tr.css
+++ b/html/css/custom_tr.css
@@ -2,6 +2,9 @@
     border:0px !important;
     padding:0px !important;
 }
+#backspace_key {
+    height:60px;
+}
 
 .container {
     width: 1280px; 
