--- a/html/css/type-talk.css
+++ b/html/css/type-talk.css
@@ -4,129 +4,149 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-the-big-picture/blob/master/LICENSE)
  */
 #top-half {
-  background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  overflow: hidden;
-  height: 30vh;
-  position: relative;
+	background: url('../../pictures/background/4.jpg') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+	overflow: hidden;
+	height: 40vh;
+	position: relative;
+}
+
+#bottom-half {
+	background: url('../../pictures/background/3.png') no-repeat top left fixed;
+	background-size: cover;
+	overflow: hidden;
+	height: 60vh;
 }
 
 /* .char-drop */
 .drops {
-  position: fixed;
-  /*font-size: 2rem;*/
-  height: 100%;
-  /* top: -10; */
-  text-shadow: 3px 2px 2px #000000;
-  margin: 0;
-  ` padding: 0;
-  animation-name: drop;
-  animation-timing-function: ease-in;
-  /* translate: rotateX(360deg) 5s ease; */
-  /* animation-duration: 10s; */
+	position: fixed;
+	/*font-size: 2rem;*/
+	height: 100%;
+	/* top: -10; */
+	text-shadow: 3px 2px 2px #000000;
+	margin: 0;
+	` padding: 0;
+	animation-name: drop;
+	animation-timing-function: ease-in;
+	/* translate: rotateX(360deg) 5s ease; */
+	/* animation-duration: 10s; */
 
 }
 
 @keyframes drop {
-  from {
-    transform: translateY(50px)
-  }
-  to {
-    transform: translateY(110%)
-  }
+	from {
+		transform: translateY(50px)
+	}
+	to {
+		transform: translateY(110%)
+	}
 }
 
 
 .progress_background {
-  background: linear-gradient(133deg, #2b9fee, #95bdff, #154fe1, #ffffff);
-  background-size: 800% 800%;
+	background: linear-gradient(133deg, #2b9fee, #95bdff, #154fe1, #ffffff);
+	background-size: 800% 800%;
 
-  -webkit-animation: fade_progress 9s ease infinite;
-  -moz-animation: fade_progress 9s ease infinite;
-  animation: fade_progress 9s ease infinite;
+	-webkit-animation: fade_progress 9s ease infinite;
+	-moz-animation: fade_progress 9s ease infinite;
+	animation: fade_progress 9s ease infinite;
 }
 
 
 @-webkit-keyframes fade_progress {
-  0% {
-    background-position: 0% 2%
-  }
-  50% {
-    background-position: 100% 99%
-  }
-  100% {
-    background-position: 0% 2%
-  }
+	0% {
+		background-position: 0% 2%
+	}
+	50% {
+		background-position: 100% 99%
+	}
+	100% {
+		background-position: 0% 2%
+	}
 }
 
 @-moz-keyframes fade_progress {
-  0% {
-    background-position: 0% 2%
-  }
-  50% {
-    background-position: 100% 99%
-  }
-  100% {
-    background-position: 0% 2%
-  }
+	0% {
+		background-position: 0% 2%
+	}
+	50% {
+		background-position: 100% 99%
+	}
+	100% {
+		background-position: 0% 2%
+	}
 }
 
 @keyframes fade_progress {
-  0% {
-    background-position: 0% 2%
-  }
-  50% {
-    background-position: 100% 99%
-  }
-  100% {
-    background-position: 0% 2%
-  }
+	0% {
+		background-position: 0% 2%
+	}
+	50% {
+		background-position: 100% 99%
+	}
+	100% {
+		background-position: 0% 2%
+	}
 }
 
 .writer:after {
-  content: "_";
-  animation: blink 1s infinite;
+	content: "_";
+	animation: blink 1s infinite;
 }
 
 /*.writer:last*/
 
 @keyframes blink {
-  0% {
-    opacity: 1;
-  }
-  1% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  51% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 1;
+	}
+	1% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 0;
+	}
+	51% {
+		opacity: 1;
+	}
 }
 
 .bullet {
-  position: fixed;
-  width: 10px;
-  z-index: -1;
-  width: 25px;
+	position: fixed;
+	width: 10px;
+	z-index: -1;
+	width: 25px;
 }
 
 .word_select {
-  display: inline-block;
-  width: 150px;
-  height: 150px;
+	display: inline-block;
+	width: 150px;
+	height: 150px;
 }
 
 .word_select_image {
-  width: 100%;
-  height: 100%;
-  padding: 5px;
+	width: 100%;
+	height: 100%;
+	padding: 5px;
 }
 
 .word_selected {
-  background-color: yellow !important;
+	background-color: yellow !important;
+}
+
+.top_menu_button {
+	display: inline-block;
+	font-size: 30px;
+	font-family: 'Raleway', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	cursor: pointer;
+	margin-right: 20px;
+}
+
+.word_highlight {
+	color:yellowgreen;
 }
